2008-03-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/CmdRef.py:
	0001873: AttributeError: 'NoneType' object has no attribute
	'get_gramps_id'

2008-03-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/AncestorTree.py:
	0001876: BUG during output creation in Ancestor Tree report.

2008-03-02 Peter Landgren <peter.talken@telia.com>
	* src/plugins/WebCal.py:
	* src/plugins/CountAncestors.py
	* src/plugins/Summary.py
	* src/plugins/DetDescendantReport.py
	* src/plugins/DetAncestralReport.py
	* src/plugins/Verify.py
	* src/PluginUtils/_Pluins.py
	Issue #1795 author information update

2008-03-02 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/RelCalc.py: Allow the tree view to be navigated via the
	keyboard. Bug #1777

2008-03-02 Jerome Rapinat <romjerome@yahoo.fr>
        * src/plugins/AgeOnDate.py : minor change for better translations

2008-03-02  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py (PedigreeGramplet.get_boxes): 
	Fixed a bug in turning off vertical lines; other refinements

2008-03-01 Brian Matherly <brian@gramps-project.org>
	* src/ViewManager.py:
	* src/ReportBase/_Constants.py:
	* src/plugins/WebCal.py:
	* src/plugins/DescendReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/KinshipReport.py:
	* src/plugins/ReorderIds.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/ExtractCity.py:
	* src/plugins/CalculateEstimatedDates.py:
	* src/plugins/BookReport.py:
	* src/plugins/Eval.py:
	* src/plugins/NarrativeWeb.py:
	* src/plugins/CmdRef.py:
	* src/plugins/NotRelated.py:
	* src/plugins/TimeLine.py:
	* src/plugins/ChangeNames.py:
	* src/plugins/Calendar.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/MarkerReport.py:
	* src/plugins/DateParserDisplayTest.py:
	* src/plugins/RemoveUnused.py:
	* src/plugins/RebuildRefMap.py:
	* src/plugins/FindDupes.py:
	* src/plugins/TestcaseGenerator.py:
	* src/plugins/SoundGen.py:
	* src/plugins/Rebuild.py: