@@ -1,3 +1,12 @@
+2008-03-02 Gary Burton <gary.burton@zen.co.uk>
+	* src/GrampsCfg.py:
+	* src/Config/_GrampsConfigKeys.py:
+	* src/gen/db/dbdir.py:
+	* src/DbManager.py:
+	* src/DbLoader.py: Gramps databases run with transactions enabled. The
+	option to switch off transactions is now removed. The "transactions" and 
+	"port_warn" settings are ignored in the config file.
+
 2008-03-02 Brian Matherly <brian@gramps-project.org>
 	* src/plugins/CmdRef.py:
 	0001873: AttributeError: 'NoneType' object has no attribute
